--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
   <h2 class="pro" >A <span style="text-decoration: underline;">pro</span>grammer</h2>  
       <img class="bottom_cloud" src="image/cloud.png" alt="cloud">
-    <img  src="image/mountain.png" alt="mountain">
+<!--     <img  src="image/mountain.png" alt="mountain"> -->
 
    </div>
    <div class="middle-container">
