--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       
       <img class="namaste" src="image/namaste-removebg-preview.png" alt="">
        
-      <p>I am an  Web Developer, currently working as system engineer at infosys & I ❤️ coffee .
+      <p class="infosys">I am an  Web Developer, currently working as system engineer at infosys & I ❤️ coffee .
       </p>
     </div>
     <hr class="line">
