--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <img class="skill" src="image/internet.png" alt="">
 
         <h3>Web Development</h3>
-        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+      <!-- <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p> -->
       </div>
       <div class="skill-row">
         <img class="skill" src="image/c++.png" alt="">
@@ -58,7 +58,7 @@
       <div class="skill-row">
         <img class="computer" src="image/computer.png" alt="">
                 <h3>Languages:</h3>
-        <p>I can code in c++ & java</p>
+       <!--   <p>I can code in c++ & java</p> -->
       </div>
     </div>
     <br>
